--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>OurApp</title>
+    <title>
+      <%= typeof(title) == "undefined"? 'VThink': `${title} | VThink` %>
+    </title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -61,6 +63,7 @@
             >Create Post</a
           >
           <form action="/logout" method="POST" class="d-inline">
+            <input type="hidden" name="_csrf" value="<%=csrfToken %>" />
             <button class="btn btn-sm btn-secondary">Sign Out</button>
           </form>
         </div>
@@ -85,6 +88,7 @@
               />
             </div>
             <div class="col-md-auto">
+              <input type="hidden" name="_csrf" value="<%=csrfToken %>" />
               <button class="btn btn-primary btn-sm">Sign In</button>
             </div>
           </div>
