--- a/views/post-screen.ejs
+++ b/views/post-screen.ejs
@@ -19,6 +19,7 @@
         action="/post/<%=post._id%>/delete"
         method="POST"
       >
+        <input type="hidden" name="_csrf" value="<%=csrfToken %>" />
         <button
           class="delete-post-button text-danger"
           data-toggle="tooltip"
@@ -33,9 +34,12 @@
   </div>
 
   <p class="text-muted small mb-4">
-    <a href="#"><img class="avatar-tiny" src="<%=post.author.avatar%>"/></a>
-    Posted by <a href="#"><%=post.author.username%></a> on <%=
-    post.createdDate.getMonth() +
+    <a href="/profile/<%=post.author.username%>"
+      ><img class="avatar-tiny" src="<%=post.author.avatar%>"
+    /></a>
+    Posted by
+    <a href="/profile/<%=post.author.username%>"><%=post.author.username%></a>
+    on <%= post.createdDate.getMonth() +
     1%>/<%=post.createdDate.getDate()%>/<%=post.createdDate.getFullYear()%>
   </p>
 
